--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="row">
     <div class="col-sm-4">
         <h3>Design Fuego</h3>
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+          <a target="_blank" href="http:">
          <div class="hover">
        <img src="Design-Fuego-main copy/hero copy.jpeg" class="img-responsive" style="width:100%"alt="Design-Fuego-main" >
               </div>
@@ -48,7 +48,7 @@
 
     <div class="col-sm-4">
         <h3>UX Testing Logo Project</h3>
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+          <a target="_blank" href="http:">
          <div class="hover">
        <img src="UX reseach.jpg" class="img-responsive" style="width:100%"alt="Image" >
               </div>
@@ -73,9 +73,9 @@
 
   <div class="col-sm-4">
         <h3>Good Design</h3>
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5"></a>
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="hover">
-               <img src="GoodDesignLauren.jpg" class="img-responsive" style="width:100%"alt="Image">
+               <img src="GoodDesignThumb.jpg" class="img-responsive" style="width:100%"alt="Image">
             </div>
           </a>
               <p>Here I used InDesign to demonstate what I consider good design. I thought Rashida Jones cover of Wired Magazine was a great example of good design. Plus shes super funny!</p>
@@ -138,19 +138,19 @@
         <h3>Two-page Spread</h3>
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
          <div class="hover">
-       <img src="steve.jpeg" class="img-responsive" style="width:100%"alt="Image" >
+       <img src="2 page spread.jpg" class="img-responsive" style="width:100%"alt="Image" >
               </div>
      </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>A beauty 2-page spread focusing on makeup and nails featuring bold colors and vivid images.</p>
     </div>
      <div class="col-sm-6">
         <h3>Graphic Design Resume</h3>
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
          <div class="hover">
-       <img src="steve.jpeg" class="img-responsive" style="width:100%"alt="Image" >
+       <img src="LAUREN DESIGN RESUME.jpg" class="img-responsive" style="width:100%"alt="Image" >
               </div>
      </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>My sleek, but fun and creative design resume that will give employeers a little piece of my personality along with my work ethic.</p>
     </div>
    </div>
 
@@ -159,7 +159,7 @@
        <h3>Advertisement</h3>
          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
         <div class="hover">
-      <img src="steve.jpeg" class="img-responsive" style="width:100%"alt="Image" >
+      <img src="lemonade.pdf" class="img-responsive" style="width:100%"alt="Image" >
              </div>
     </a>
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -168,10 +168,10 @@
       <h3>Client Project</h3>
         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal9">
        <div class="hover">
-     <img src="steve.jpeg" class="img-responsive" style="width:100%"alt="Image" >
+     <img src="S. Quigley Design Flyer.png" class="img-responsive" style="width:100%"alt="Image" >
             </div>
    </a>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>I had the oppritunity to work with Dr. Stephen Quiqley to create a poster for his Arduino Storybook Showcase. It used bold colors and fonts and images to create this appealing design.</p>
   </div>
  </div>
 </div>
@@ -184,12 +184,14 @@
    <div class="row">
      <div class="col-sm-4">
             <p><em>1. Consider the role of rhetoric, technology, and ethics in acts of making.</em></p>
-               <p>When I'm working on a project, I think a lot about the message I want to convey, the tools I use, and doing the right thing. I believe it's important to communicate clearly, use the best tech available, and always consider the impact of my work. This way, I ensure that my designs are not just attractive but also meaningful and responsible.</p>
+               <p>My grasp of the role of rhetoric in design has deepened. I now appreciate how the art of persuasion is not just about language but also about how visual elements can influence perception and decision-making. Learning to leverage design principles effectively, I've become more skilled at crafting messages that resonate with my audience, understanding that every color choice, font selection, and layout decision carries rhetorical weight.
+
+               </p>
      </div>
      
      <div class="col-sm-4">
              <p><em>2. Leverage Design Principles.</em></p>
-               <p>When I design, I focus on making things both good-looking and functional. I think about how different colors and fonts will make my design pop and be easy for everyone to read. I want to ensure that everyone, even people with disabilities, can enjoy what I create.</p>
+               <p>The principles of design have become a cornerstone of my creative process. Whether it's balance, contrast, or alignment, I've learned to apply these principles more thoughtfully in my projects. This has not only improved the visual appeal of my work but also its effectiveness in communicating the intended message.</p>
      </div>
    </div>
  <br>
